# efemeride

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
scripts/: playground.py
src/efemeride/: __init__.py  __main__.py  cli.py  core.py  effects.py  render.py
tests/: test_cli.py
